# spatial-math

./: .gitignore  .travis.yml  LICENSE  Quat.hs  README.md  SpatialMath.hs  Xyz.hs  changelog.txt  flake.nix  package.yaml  spatial-math.cabal  stack.yaml
SpatialMath/: Quat.hs  Xyz.hs
src/: SpatialMath.hs  SpatialMathT.hs  Types.hs
src/SpatialMath/: ArcTan2.hs  Conversions.hs  Euler.hs  Internal.hs  LibmFfi.hs  Types.hs  Untyped.hs
tests/: Main.hs  Tests.hs  doctests.hs
