name:                spatial-math
version:             0.1.7
synopsis:            3d math including quaternions/euler angles/dcms and utility functions
description:         This is a port of my 'mathlib' C library: https://github.com/ghorn/mathlib
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           Copyright (c) 2012, Greg Horn
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SpatialMath,
                       Quat,
                       Xyz
  -- other-modules:       
  build-depends:       base >= 4 && < 5,
                       hmatrix >= 0.14,
                       random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/ghorn/spatial-math.git

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       base >= 4 && < 5,
                       doctest >= 0.8
  default-language:    Haskell2010
  ghc-options:         -threaded
  hs-source-dirs:      tests
