name:                spatial-math
version:             0.5.0.1
synopsis:            3d math including quaternions/euler angles/dcms and utility functions
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           Copyright (c) 2012-2019, Greg Horn
category:            Math
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
                     changelog.txt

library
  hs-source-dirs:      src
  exposed-modules:     SpatialMath
                       SpatialMathT
                       SpatialMath.Internal
  other-modules:       Types
  build-depends:       base >= 4 && < 5,
                       ghc-prim,
                       cereal,
                       binary,
                       serialise,
                       linear >= 1.17.1,
                       lens,
                       TypeCompose >= 0.9.11
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

source-repository head
  type:     git
  location: git://github.com/ghorn/spatial-math.git

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       base >= 4 && < 5,
                       doctest >= 0.8,
                       doctest-discover
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -Werror
  hs-source-dirs:      tests

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  default-language:    Haskell2010
  build-depends:       base >=4.6 && < 5,
                       spatial-math,
                       QuickCheck >= 2,
                       test-framework,
                       test-framework-quickcheck2
  ghc-options:         -O2 -Wall -Werror
